feat: getting overriders from product
