# pkg/product/routes.go
@@ -19,6 +19,7 @@ func (r Routes) RegisterRoutes(router *gin.RouterGroup) {
 	router.DELETE("/product/:id", r.handler.Delete)
 	router.POST("/product/:id/modifier/:modifierID", r.handler.AddModifier)
 	router.DELETE("/product/:id/modifier/:modifierID", r.handler.RemoveModifier)
+	router.GET("/product/:id/overrider", r.handler.GetOverridersByField)
 
 	// Modifiers
 	router.GET("/modifier", r.handler.ModifierFind)
